@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>it.unipi.dsmt</groupId>
+  <groupId>it.unipi.hadoop</groupId>
   <artifactId>combiner-letter-frequency</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>combiner-letter-frequency</name>
+  <name>CombinerLetterFrequency</name>
   <url>http://maven.apache.org</url>
 
   <build>
@@ -32,15 +32,6 @@
               <mainClass>it.unipi.hadoop.RunProcess</mainClass>
             </manifest>
           </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>21</source>
-          <target>21</target>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
@@ -79,4 +70,5 @@
       <version>3.1.3</version>
     </dependency>
   </dependencies>
+
 </project>
